--- a/oneM2MTester/TestingView.ejs
+++ b/oneM2MTester/TestingView.ejs
@@ -10,144 +10,28 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
     <title> oneM2M Web Testing </title>
 
-    <style type="text/css">
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 100%;
-            max-height: 100%;
-            font-family: Sans-serif;
-            line-height: 1.5em;
-        }
-
-        #header {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100px;
-            overflow: hidden; /* Disables scrollbars on the header frame. To enable scrollbars, change "hidden" to "scroll" */
-            background: #BCCE98;
-        }
-
-        #nav {
-            position: absolute;
-            top: 100px;
-            left: 0;
-            bottom: 0;
-            width: 230px;
-            overflow: auto; /* Scrollbars will appear on this frame only when there's enough content to require scrolling. To disable scrollbars, change to "hidden", or use "scroll" to enable permanent scrollbars */
-            background: #DAE9BC;
-        }
-
-        #logo {
-            padding: 10px;
-        }
-
-        main {
-            position: fixed;
-            top: 100px; /* Set this to the height of the header */
-            left: 230px;
-            right: 0;
-            bottom: 0;
-            overflow: auto;
-            background: #fff;
-        }
-
-        #testingFormat {
-            position: absolute;
-            top: 10px; /* Set this to the height of the header */
-            left: 10px;
-            height: 600px;
-            width: 400px;
-        }
-
-        #responseFormat {
-            position: absolute;
-            top: 30px; /* Set this to the height of the header */
-            left: 700px;
-            height: 600px;
-            width: 400px;
-        }
-
-        #urlInfo {
-            position: relative;
-            top: 20px;
-            left: 20px;
-            background: #fca;
-            height: 50px;
-            width: 635px;
-        }
-
-        #headerInfo {
-            position: relative;
-            top: 40px;
-            left: 20px;
-            background: #faf;
-            width: 635px;
-            height: 200px;
-            overflow: auto;
-        }
-
-        #bodyInfo {
-            position: relative;
-            top: 40px;
-            left: 20px;
-            margin-top: 20px;
-            height: 380px;
-            width: 205px;
-        }
-
-        #saveButtonInfo {
-            position: relative;
-            top: 120px;
-            left: 500px;
-            margin-top: 20px;
-            height: 30px;
-            width: 60px;
-        }
-
-        .innertube {
-            margin: 15px; /* Provides padding for the content */
-        }
-
-        p {
-            color: #555;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav ul a {
-            color: darkgreen;
-            text-decoration: none;
-        }
-
-        /*IE6 fix*/
-        * html body {
-            padding: 100px 0 0 230px; /* Set the first value to the height of the header and last value to the width of the nav */
-        }
-
-        * html main {
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 
     <script src="jquery-3.0.0.min.js"></script>
+
     <!--[if lt IE 9]>
     <script src="html5shiv.js"></script>
     <![endif]-->
 
-    <script type="text/javascript">
+    <!-- Setting the code mirror library for the textarea -->
+    <link rel="stylesheet" href="codemirror/codemirror-5.15.2/lib/codemirror.css">
+    <link rel="stylesheet" href="codemirror/codemirror-5.15.2/theme/blackboard.css">
+    <script src="codemirror/codemirror-5.15.2/lib/codemirror.js"></script>
+    <script src="codemirror/codemirror-5.15.2/mode/xml/xml.js"></script>
+    <script src="codemirror/codemirror-5.15.2/mode/javascript/javascript.js"></script>
+    <script src="codemirror/codemirror-5.15.2/addon/selection/active-line.js"></script>
 
+    <!-- Setting the json / xml pretty library -->
+    <script src="vkbeautify.js"></script>
+
+    <script type="text/javascript">
         /************** Defining the global variable **************/
         window.idValue = 0;
         window.headerCount = 0;
@@ -158,10 +42,11 @@
             $('#request').click(function() {
 
                 if (idValue != 0) {
+
                     // Collecting the information to send a data to server
                     var urlInformation = $('#setURL').val(); // Getting the url information
                     var methodInformation = $('#methodList :selected').text(); // Getting the method information
-                    var bodyInformation = $("#bodyText").val(); // Getting the body information
+                    var bodyInformation = editor.getValue(); // Getting the body information
                     var headerNameList = $('.headerName'); // Getting the header name list
                     var headerValueList = $('.headerValue'); // Getting the header value list
 
@@ -196,30 +81,16 @@
                         data: JSON.stringify(jsonObject),
                         contentType: "application/json",
                         success: function (responseData) {
-                            var headers = responseData['headers'];
-                            var headerInfo = '';
-
-                            for(headerName in headers) {
-                                var headerValue = headers[headerName];
-                                headerInfo += (headerName + " : " + headerValue + '\n');
-                            }
+                            var headerInfo = requestResultFunction(responseData);
 
                             $('#statusResult').html("Status : " + responseData['status']);
                             $('#headerTextResult').val(headerInfo);
-                            $('#bodyTextResult').val(responseData['body']);
                         }, error: function (xhr, textStatus, errorThrown) {
                             var errorInfoObject = JSON.parse(xhr.responseText);
-                            var headers = errorInfoObject['headers'];
-                            var headerInfo = '';
-
-                            for(headerName in headers) {
-                                var headerValue = headers[headerName];
-                                headerInfo += (headerName + " : " + headerValue + '\n');
-                            }
+                            var headerInfo = requestResultFunction(errorInfoObject);
 
                             $('#statusResult').html("Status : " + errorInfoObject['status']);
                             $('#headerTextResult').val(headerInfo);
-                            $('#bodyTextResult').val(errorInfoObject['body']);
                         }
                     });
                 } else {
@@ -233,7 +104,7 @@
                 if (idValue != 0) {
                     var urlInformation = $('#setURL').val(); // Getting the url information
                     var methodInformation = $('#methodList :selected').text(); // Getting the method information
-                    var bodyInformation = $("#bodyText").val(); // Getting the body information
+                    var bodyInformation = editor.getValue(); // Getting the body information
                     var headerNameList = $('.headerName'); // Getting the header name list
                     var headerValueList = $('.headerValue'); // Getting the header value list
 
@@ -386,10 +257,11 @@
                 // Initializing the format
                 $("#statusResult").html(''); // status response result
                 $("#headerTextResult").val(''); // header response result
-                $("#bodyTextResult").val(''); // body response result
+                editor.setValue(''); // body response result
 
                 /* Using a global variable */
                 idValue = $(this).attr('id'); // This is a global variable for deleting the resource.
+
                 $.ajax({
                     url: "http://127.0.0.1:62590/getSelectedResource/" + idValue,
                     type: "get",
@@ -398,14 +270,14 @@
                     timeout: 30000,
                     success: function (jsonObject) {
 
+                        $('#headerElement').empty(); headerCount = 0; // Initialize the header format
+
                         // Retrieving the selected variable value such as url, method, header, body
                         var resultObject = jsonObject['requestInfo'];
                         var urlInformation = resultObject['urlInformation'];
                         var methodInformation = resultObject['methodInformation'];
                         var bodyInformation = resultObject['bodyInformation'];
                         var headerInformation = resultObject['headerInformation'];
-
-                        $('#headerElement').empty(); headerCount = 0; // Initialize the header format
 
                         for(var i = 0; i < headerInformation.length; i++) {
                             if(headerInformation[i] != null) {
@@ -447,7 +319,7 @@
                         else
                             $('#methodList').val(methodInformation);
                         $('#setURL').val(urlInformation);
-                        $('#bodyText').val(bodyInformation);
+                        editor.setValue(bodyInformation);
                     },
                     error: function (xhr, textStatus, errorThrown) {
                         alert(textStatus + ' : ' + errorThrown);
@@ -463,9 +335,9 @@
 
             // Assembling the element for constructing the resource
             var jsonArray = JSON.parse(JSON.stringify(<%-resourceConfig%>))['resourceInfo'];
-
             createFunction(jsonArray);
 
+            /************* Common function definition *************/
             function createFunction(jsonArray) {
                 var resourceListRoot = $('#resourceListRoot');
                 for (var i = 0; i < jsonArray.length; i++) {
@@ -479,6 +351,68 @@
                     resourceListRoot.append(resourceElement);
                 }
             }
+
+            function requestResultFunction(responseObject) {
+                var headers = responseObject['headers'];
+                var headerInfo = '';
+
+                for(headerName in headers) {
+                    var headerValue = headers[headerName];
+                    headerInfo += (headerName + " : " + headerValue + '\n');
+
+                    if(headerName.toUpperCase() == "ACCEPT") {
+                        if(headers[headerName].toUpperCase() == "APPLICATION/XML") {
+                            resultEditor.setOption("mode", "application/xml");
+                            resultEditor.setValue(vkbeautify.xml(responseObject['body']));
+                        } else if(headers[headerName].toUpperCase() == "APPLICATION/JSON") {
+                            resultEditor.setOption("mode", "application/ld+json");
+                            resultEditor.setValue(vkbeautify.json(responseObject['body']));
+                        } else {
+                            resultEditor.setOption("mode", "javascript");
+                            resultEditor.setValue(responseObject['body']);
+                        }
+                    }
+                }
+                return headerInfo;
+            }
+
+            /* 1. Editor view mode definition such as XML, JSON, Javascript
+               2. code mirror library is used in this code */
+            var editorTextArea = document.getElementById('bodyText');
+            var editor = CodeMirror.fromTextArea(editorTextArea, {
+                lineNumbers: true,
+                lineWrapping: true,
+                mode : "javascript",
+                theme:"blackboard",
+                styleActiveLine: true,
+            });
+            editor.setSize("635", "460");
+
+            var resultTextArea = document.getElementById('bodyTextResult');
+            var resultEditor =  CodeMirror.fromTextArea(resultTextArea, {
+                lineNumbers: true,
+                lineWrapping: true,
+                mode : "javascript",
+                theme:"blackboard",
+                readOnly: true,
+                styleActiveLine: true,
+            });
+            resultEditor.setSize("632", "460");
+
+            // Changing the view mode
+            $("#modeList").change(function () {
+                var modeInfo = $('#modeList :selected').text(); // Getting the mode(Javascript, XML, JSON) information
+                var changedMode = ''; // selected view mode (Javascript, XML, JSON)
+
+                if(modeInfo == "Javascript") {
+                    changedMode = 'javascript';
+                } else if(modeInfo == "XML") {
+                    changedMode = "application/xml";
+                } else if(modeInfo == "JSON") {
+                    changedMode = "application/ld+json";
+                }
+                editor.setOption("mode", changedMode);
+            });
         });
     </script>
 </head>
@@ -493,6 +427,7 @@
 <main>
         <span id="testingFormat">
         <div id="urlInfo">
+
             <span id="methodSelection">
                 <select id="methodList">
                     <option value="GET">GET</option>
@@ -523,8 +458,22 @@
             </div>
         </div>
 
+        <div id="modeInfo">
+
+            <span> View mode : </span>
+
+            <span>
+                <select id="modeList">
+                    <option value="Javascript">Javascript</option>
+                    <option value="XML">XML</option>
+                    <option value="JSON">JSON</option>
+                </select>
+            </span>
+
+        </div>
+
         <div id="bodyInfo">
-            <textarea id="bodyText" rows="30" cols="87" style="resize:none"></textarea>
+            <textarea id="bodyText"></textarea> <!-- Code mirror text area -->
         </div>
         <div id="saveButtonInfo">
             <input type="Button" value="Saving form information" id="saveButton"/>
@@ -538,7 +487,7 @@
             </div>
 
             <div id="bodyInfoResult">
-                <textarea readonly id="bodyTextResult" rows="30" cols="87" style="resize:none"></textarea>
+                <textarea id="bodyTextResult"></textarea> <!-- Code mirror text area -->
             </div>
         </span>
 </main>
