Getting the id lists for sortable

--- a/oneM2MTester/TestingView.ejs
+++ b/oneM2MTester/TestingView.ejs
@@ -14,11 +14,13 @@
 
     <link rel="stylesheet" href="main.css">
 
-    <script src="jquery-3.0.0.min.js"></script>
-
     <!--[if lt IE 9]>
     <script src="html5shiv.js"></script>
     <![endif]-->
+
+    <!-- Setting the JQuery & JQuery-UI -->
+    <script src="jquery-3.0.0.min.js"></script>
+    <script src="jquery-ui-1.12.0/jquery-ui.js"></script>
 
     <!-- Setting the code mirror library for the textarea -->
     <link rel="stylesheet" href="codemirror/codemirror-5.15.2/lib/codemirror.css">
@@ -40,7 +42,6 @@
 
             // Request to specific server
             $('#request').click(function() {
-
                 if (idValue != 0) {
 
                     // Collecting the information to send a data to server
@@ -65,7 +66,6 @@
                         var headerName = headerNameList[i].value;
                         var headerValue = headerValueList[i].value;
                         var tempObject = new Object();
-
                         tempObject.headerName = headerName;
                         tempObject.headerValue = headerValue;
                         jsonArray.push(tempObject);
@@ -80,15 +80,14 @@
                         timeout: 30000,
                         data: JSON.stringify(jsonObject),
                         contentType: "application/json",
+
                         success: function (responseData) {
                             var headerInfo = requestResultFunction(responseData);
-
                             $('#statusResult').html("Status : " + responseData['status']);
                             $('#headerTextResult').val(headerInfo);
                         }, error: function (xhr, textStatus, errorThrown) {
                             var errorInfoObject = JSON.parse(xhr.responseText);
                             var headerInfo = requestResultFunction(errorInfoObject);
-
                             $('#statusResult').html("Status : " + errorInfoObject['status']);
                             $('#headerTextResult').val(headerInfo);
                         }
@@ -119,11 +118,11 @@
                     jsonObject.requestInfo.bodyInformation = bodyInformation;
 
                     // Creating the JSONArray to save the request information
+
                     for (var i = 0; i < headerNameList.length; i++) {
                         var headerName = headerNameList[i].value;
                         var headerValue = headerValueList[i].value;
                         var tempObject = new Object();
-
                         tempObject.headerName = headerName;
                         tempObject.headerValue = headerValue;
                         jsonArray.push(tempObject);
@@ -159,26 +158,21 @@
                         "type": "text",
                         "class": "headerName"
                     });
-
                     var headerValueInput = $('<input>');
                     headerValueInput.attr({
                         "type": "text",
                         "class": "headerValue"
                     });
-
                     var headerDelButton = $('<input>');
                     headerDelButton.attr({
                         "type": "button",
                         "value": "Delete",
                         "class": "deleteHeaderFormat"
                     });
-
                     headerElement.append(headerNameInput).append(headerValueInput).append(headerDelButton);
-
                     var headerListRoot = $('#headerElement');
                     headerListRoot.append(headerElement);
                     headerCount++;
-
                 } else if (headerCount == 8) {
                     alert("You do not create the header more than 9");
                 }
@@ -186,7 +180,6 @@
 
             // Creating a resource with RandomValue;
             $('#createResource').click(function () {
-
                 var resourceTitle = prompt(' Enter the resource name', 'ex) AE_Resource_Create');
 
                 if (resourceTitle) {
@@ -200,14 +193,15 @@
                         cache: false,
                         timeout: 30000,
                         data: params,
-                        success: function (data) {
 
+                        success: function (data) {
                             // Creating a resource list with resourceName
                             var resourceListRoot = $('#resourceListRoot');
 
                             // Constructing the resource list
-                            var resourceElement = $("<div>");
+                            var resourceElement = $("<li>");
                             resourceElement.attr({'id': resourceName});
+                            resourceElement.addClass("ui-state-default");
                             resourceElement.addClass("resourceListEvent");
                             resourceElement.html(resourceTitle);
                             resourceListRoot.append(resourceElement); // Adding the element to root */
@@ -219,6 +213,7 @@
             });
 
             $('#deleteResource').click(function () {
+
                 if (idValue != 0) {
                     var check = confirm("Do you delete the selected resource?");
 
@@ -268,6 +263,7 @@
                     dataType: "json",
                     cache: false,
                     timeout: 30000,
+
                     success: function (jsonObject) {
 
                         $('#headerElement').empty(); headerCount = 0; // Initialize the header format
@@ -280,8 +276,8 @@
                         var headerInformation = resultObject['headerInformation'];
 
                         for(var i = 0; i < headerInformation.length; i++) {
-                            if(headerInformation[i] != null) {
 
+                            if(headerInformation[i] != null) {
                                 var headerSplitArray = headerInformation[i].split(":");
                                 var headerName = headerSplitArray[0];
                                 var headerValue = headerSplitArray[1];
@@ -305,8 +301,8 @@
                                     "value": "Delete",
                                     "class": "deleteHeaderFormat"
                                 });
-                                headerElement.append(headerNameInput).append(headerValueInput).append(headerDelButton);
 
+                                headerElement.append(headerNameInput).append(headerValueInput).append(headerDelButton);
                                 var headerListRoot = $('#headerElement');
                                 headerListRoot.append(headerElement);
                                 headerCount++;
@@ -341,11 +337,10 @@
             function createFunction(jsonArray) {
                 var resourceListRoot = $('#resourceListRoot');
                 for (var i = 0; i < jsonArray.length; i++) {
-
                     // Constructing the resource list
-                    var resourceElement = $("<div>");
-
+                    var resourceElement = $("<li>");
                     resourceElement.attr({'id': jsonArray[i].resourceName});
+                    resourceElement.addClass("ui-state-default");
                     resourceElement.addClass("resourceListEvent");
                     resourceElement.html(jsonArray[i].resourceTitle);
                     resourceListRoot.append(resourceElement);
@@ -377,7 +372,7 @@
             }
 
             /* 1. Editor view mode definition such as XML, JSON, Javascript
-               2. code mirror library is used in this code */
+             2. code mirror library is used in this code */
             var editorTextArea = document.getElementById('bodyText');
             var editor = CodeMirror.fromTextArea(editorTextArea, {
                 lineNumbers: true,
@@ -403,7 +398,6 @@
             $("#modeList").change(function () {
                 var modeInfo = $('#modeList :selected').text(); // Getting the mode(Javascript, XML, JSON) information
                 var changedMode = ''; // selected view mode (Javascript, XML, JSON)
-
                 if(modeInfo == "Javascript") {
                     changedMode = 'javascript';
                 } else if(modeInfo == "XML") {
@@ -413,6 +407,37 @@
                 }
                 editor.setOption("mode", changedMode);
             });
+
+            $("#resourceListRoot").sortable({
+                axis: "y",
+                stop: function(event, ui) {
+                    $('#resourceListRoot').find('li').each(function() {
+
+                        var idList = new Array();
+                        idList.add($(this).attr("id"));
+                        alert(idList);
+
+                        $.ajax({
+                            url: "http://127.0.0.1:62590/updatingResourceList",
+                            type: "put",
+                            dataType: "text",
+                            cache: false,
+                            timeout: 30000,
+                            data: JSON.stringify(jsonObject),
+                            contentType: "application/json",
+
+                            success: function (data) {
+                                alert("Success updating the resource");
+                                
+                            }, error: function (xhr, textStatus, errorThrown) {
+                                alert(textStatus + ' : ' + errorThrown);
+                            }
+                        });
+                    });
+                }
+            });
+
+            $("#resourceListRoot").disableSelection();
         });
     </script>
 </head>
@@ -495,12 +520,14 @@
 <nav id="nav">
     <div class="innertube">
         <h1> Resource List </h1>
-                <span>
-                    <input type="button" value="+ Resource" id="createResource"/>
-                    <input type="button" value="- Resource" id="deleteResource"/>
-                </span>
+            <span>
+                <input type="button" value="+ Resource" id="createResource"/>
+                <input type="button" value="- Resource" id="deleteResource"/>
+            </span>
     </div>
-    <div id="resourceListRoot" class="innertube"></div>
+    <div>
+        <ul id="resourceListRoot" class="innertube"></ul>
+    </div>
 </nav>
 </body>
 </html>
