--- a/oneM2MTester/Javascript/jquery-ui-1.12.0/jquery-ui.css
+++ b/oneM2MTester/Javascript/jquery-ui-1.12.0/jquery-ui.css
@@ -930,7 +930,7 @@ works properly when clicked or hovered */
 html .ui-button.ui-state-disabled:hover,
 html .ui-button.ui-state-disabled:active {
 	border: 1px solid #c5c5c5;
-	background: #f6f6f6;
+	background: #3f3f3f;
 	font-weight: normal;
 	color: #454545;
 }
